Updated sps portfolio item

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Google Analytics Script -->
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics 
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
         <script>
@@ -51,7 +51,7 @@
           gtag('js', new Date());
 
           gtag('config', 'UA-6645091-26');
-        </script>
+        </script>-->
 
 
         <!-- Note: plugin scripts must be included after the tracking snippet. -->
@@ -592,57 +592,86 @@
 
                         <p class="project-overview-tools"><strong>Tools/Methodologies Used:</strong> Design Thinking Workshops, User Research, Miro, Balsamiq, Sketch, InVision, User Testing &amp; Validation</p>
 
-                        <p class="project-overview-intro">We often come up with ideas that seem like sure-fire winners. Design Sprints are a great way to quickly validate these ideas and move forward with confidence.</p>
+                        <p class="project-overview-intro">Design Sprints are a great way to quickly validate ideas and move forward with confidence.</p>
 
-                        <p>Specializing in retailer relationship management and demand and supply planning, SPS Commerce already had a lot to offer. With that in mind, we got together to identify, prioritize, and validate several add-on ideas for their product, Fulfillment.</p>
+                        <p>Specializing in retailer relationship management and demand and supply planning, SPS Commerce offers clients with many solutions. The problem was how to more easily allow purchase and implementation of those solutions.</p>
 
-                        <p>We began with a two-day Design Thinking Workshop that allowed us to gather information such as customer pain points and needs, in turn helping our team and the client to build empathy.</p>
+                        <p>Along with a few Slalom team members, we joined SPS Commerce in a six week engagement that began with a one week Design Sprint. Our Design Sprint included stakeholder interviews and Design Thinking workshops which helped us quickly ideate and align on problems and solutions to pursue.</p>
 
-                    </div>
-
-                    <div class="project-overview-image">
-
-                        <img src="images/sps-commerce-1.jpg">
-
-                    </div>
-
-                    <div class="project-overview-content">
-
-                        <p>Next, we put on our traveling gear, and ventured out to visit a few of SPS Commerce's customers about how and why they use Fulfillment.</p>
-
-                        <p>This in-person user research proved incredibly useful, as we found out that some customers were a bit more willing to express real issues and pain points with a third party group. While it can be tough to hear, it provided us with opportunities as well.</p>
-
-                        <p>A handful of warehouses and colorful interactions later, our time spent with real customers had given us enough to bring back to the mother ship and begin refining some ideas.</p>
+                        <p>The Design Sprint also allowed us to create crucial artifacts such as current journey maps, personas, storyboards, mind maps, and sketches. These artifacts helped to inform our approach on a future state service blueprint and prototypes.</p>
 
                     </div>
 
                     <div class="project-overview-image">
 
-                        <img src="images/sps-commerce-2.jpg">
+                        <img src="images/sps-1.jpg">
+
+                        <p class="project-overview-caption">Artifacts of our workshops including an icebreaker exercise, user journey maps, mind mapping, and storyboards</p>
 
                     </div>
 
                     <div class="project-overview-content">
 
-                        <p>We regrouped with the team at SPS Commerce and began running through user scenarios and validating the lo-fidelity prototypes of our add-on ideas.</p>
-
-                        <p>We regrouped with the team at SPS Commerce and began running through user scenarios and validating the lo-fidelity prototypes of our add-on ideas.</p>
-
-                        <p>After some real talk and refining, we narrowed our add-ons down and began work on our hi-fidelity prototypes that could be presented to customers, get validated as valuable, and then make a decision on moving forward with a build phase.</p>
+                        <p>The biggest challenge of the engagement and the Design Sprint in particular was conducting everything virtually. Fortunately, tools like Miro and Balsamiq allowed for easy collaboration. By using these tools, our workshops were able to allow for real-time ideation, pain point alignment, sketching, lo-fi prototyping, and more.</p>
 
                     </div>
 
                     <div class="project-overview-image">
 
-                        <img src="images/sps-commerce-3.jpg">
+                        <img src="images/sps-2.jpg">
+
+                        <p class="project-overview-caption">Current state service blueprint based off of workshop insights and customer interviews</p>
 
                     </div>
 
                     <div class="project-overview-content">
 
-                        <p>In the end, we presented SPS Commerce with all our findings, and talked about the business viability of moving forward with the add-on ideas that made it through the gamut.</p>
+                        <p>Over the course of the next few weeks, we went from a lo-fidelity Balsamiq prototype that allowed us to quickly align on what a solution might look like, to a hi-fidelity prototype built in Sketch & InVision that was realistic enough to validate with real customers.</p>
 
-                        <p>Just as important, we were able help them build better relationships with their clients, which will in turn allow them to better understand and serve them.</p>
+                    </div>
+
+                    <div class="project-overview-image">
+
+                        <img src="images/sps-3.jpg">
+
+                        <p class="project-overview-caption">Lo-fidelity prototypes in Balsamiq</p>
+
+                    </div>
+
+                    <div class="project-overview-image">
+
+                        <img src="images/sps-4.jpg">
+
+                        <p class="project-overview-caption">Hi-fidelity prototypes in Sketch</p>
+
+                    </div>
+
+                    <div class="project-overview-content">
+
+                        <p>We conducted ten customer interviews that gave us valuable insight into our solution. By interviewing customers about their current experience, and then presenting our prototype, we were able to instantly qualify whether or not we were on the right path, and make iterations accordingly.</p>
+
+                        <p>By using the Design Sprint and Design Thinking methodologies along the entire process, we were able to come with a solution that was viable and feasible for SPS Commerce, and desirable for the customer.</p>
+
+                    </div>
+
+                    <div class="project-overview-video">
+
+                        <video autoplay="true" loop controls="true" class="project-video">
+
+                            <source src="videos/sps-overview.webm" type="video/webm">
+                            <source src="videos/sps-overview.mp4" type="video/mp4">
+
+                            Sorry, your browser doesn't support embedded videos.
+
+                        </video>
+
+                        <p class="project-overview-caption">Clickable prototype in InVision</p>
+
+                    </div>
+
+                    <div class="project-overview-content">
+
+                        <p>Throughout the engagement, we had numerous check-ins with SPS Commerce stakeholders, presenting our findings and providing recommendations. With two weeks remaining in the engagement, SPS Commerce was already confident enough in our findings to move forward with an initial MVP based on the existing prototype.</p>
 
                     </div>
                                             
