--- a/index.html
+++ b/index.html
@@ -366,6 +366,10 @@
 
                         <p class="project-overview-caption">GERTY Design System symbols</p>
 
+                    </div>
+
+                    <div class="project-overview-image">
+
                         <img src="images/gerty-4.jpg">
 
                         <p class="project-overview-caption">Product screen built in Sketch</p>
