--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
                         <img src="images/gerty-5.jpg">
 
-                        <p class="project-overview-caption">GERTY website's home page</p>
+                        <p class="project-overview-caption">GERTY website's home page built in HTML/CSS/JS</p>
 
                     </div>
 
