--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
                         <p>We conducted ten customer interviews that gave us valuable insight into our solution. By interviewing customers about their current experience, and then presenting our prototype, we were able to instantly qualify whether or not we were on the right path, and make iterations accordingly.</p>
 
-                        <p>By using the Design Sprint and Design Thinking methodologies along the entire process, we were able to come with a solution that was viable and feasible for SPS Commerce, and desirable for the customer.</p>
+                        <p>By using the Design Sprint and Design Thinking methodologies along the entire process, we were able to create a solution that was viable and feasible for SPS Commerce, and desirable for the customer.</p>
 
                     </div>
 
