--- a/index.html
+++ b/index.html
@@ -389,9 +389,16 @@
 
                     </div>
 
-                    <div class="project-overview-image">
+                    <div class="project-overview-video">
 
-                        <img src="images/uhc-2.jpg">
+                        <video autoplay="true" loop controls="true" class="mobile">
+
+                            <source src="videos/uhc-prototype.webm" type="video/webm">
+                            <source src="videos/uhc-prototype.mp4" type="video/mp4">
+
+                            Sorry, your browser doesn't support embedded videos.
+
+                        </video>
 
                         <p class="project-overview-caption">Patient demographics screen built in HTML/CSS/JS</p>
 
