--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
 
                     <div class="project-overview-video">
 
-                        <video autoplay="true" loop controls="true" class="mobile">
+                        <video autoplay="true" loop controls="true" class="desktop">
 
                             <source src="videos/uhc-prototype.webm" type="video/webm">
                             <source src="videos/uhc-prototype.mp4" type="video/mp4">
