--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
                         </video>
 
-                        <p class="project-overview-caption">Patient demographics screen built in HTML/CSS/JS</p>
+                        <p class="project-overview-caption">Patient demographics prototype built in HTML/CSS/JS</p>
 
                     </div>
 
