--- a/index.html
+++ b/index.html
@@ -716,6 +716,21 @@
 
                     </div>
 
+                    <div class="project-overview-video">
+
+                        <video autoplay="true" loop controls="true" class="desktop">
+
+                            <source src="videos/gerty-ds-website.webm" type="video/webm">
+                            <source src="videos/gerty-ds-website.mp4" type="video/mp4">
+
+                            Sorry, your browser doesn't support embedded videos.
+
+                        </video>
+
+                        <p class="project-overview-caption">GERTY website's home page built in HTML/CSS/JS and captured in browser</p>
+
+                    </div>
+
                     <div class="project-overview-image">
 
                         <img src="images/gerty-5.jpg">
