--- a/index.html
+++ b/index.html
@@ -590,11 +590,18 @@
 
                     </div>
 
-                    <div class="project-overview-image">
+                    <div class="project-overview-video">
 
-                        <img src="images/securian-4.jpg">
+                        <video autoplay="true" loop controls="true" class="desktop">
 
-                        <p class="project-overview-caption">Hi-fidelity prototype created using the Salesforce Lightning Design System</p>
+                            <source src="videos/securian-prototype.webm" type="video/webm">
+                            <source src="videos/securian-prototype.mp4" type="video/mp4">
+
+                            Sorry, your browser doesn't support embedded videos.
+
+                        </video>
+
+                        <p class="project-overview-caption">Hi-fidelity prototype capture created using the Salesforce Lightning Design System</p>
 
                     </div>
 
