--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     <head>
 
-        <meta name="description" content="Design Stories | By Dave Dechant">
+        <meta name="description" content="Dave Dechant | Full-stack UX Designer">
 
-        <title>Design Stories | By Dave Dechant</title>
+        <title>Dave Dechant | Full-stack UX Designer</title>
 
         <!-- Meta Info -->
 
@@ -42,7 +42,7 @@
 
         <!-- Google Analytics Script -->
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
         <script>
@@ -51,7 +51,7 @@
           gtag('js', new Date());
 
           gtag('config', 'UA-6645091-26');
-        </script>
+        </script> -->
 
 
         <!-- Note: plugin scripts must be included after the tracking snippet. -->
@@ -89,7 +89,7 @@
 
                     <h1 class="header-name">Dave Dechant</h1>
 
-                    <h2 class="header-title">Full-stack Designer</h2>
+                    <h2 class="header-title">Full-stack UX Designer</h2>
 
                 </div>
 
