Implemented Santa Hat - Hidden

--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
 
             <header class="header">
 
-                <img class="dave-face" src="images/dave-illustrated.png">
+                <div class="header-dave">
+
+                    <img class="santa-hat" src="images/santa-hat.png">
+
+                    <img class="dave-face" src="images/dave-illustrated.png">
+                    
+                </div>
 
                 <div>
 
