--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <link href="/styles/fontawesome.css" rel="stylesheet" type="text/css">
         <link href="/styles/styles.css" rel="stylesheet" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-        <link href="https://fonts.googleapis.com/css2?family=Shrikhand&family=Spartan:wght@300;500;900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Spartan:wght@300;500;900&display=swap" rel="stylesheet">
 
 
         <!-- Favicons/Icons -->
