--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
 
                             <img src="images/wtp-2.jpg">
 
-                            <figcaption class="project-details-caption">Our themes share many components, but use typography, color, and layout to provide inividuality</figcaption>
+                            <figcaption class="project-details-caption">Our themes share many components, but use typography, color, and layout to provide individuality</figcaption>
 
                         </figure>
 
