--- a/resume.html
+++ b/resume.html
@@ -225,7 +225,7 @@
 
                     <h2>Some Tools I Use</h2>
 
-                    <small>Miro, Balsamiq, Figma, Sketch, InVision, Adobe Creative Suite, Sublime Text, CodeKit, BrowserStack, Zeplin</small>
+                    <small>Miro, Balsamiq, Figma, Sketch, InVision, Adobe Creative Suite, Sublime Text, CodeKit, BrowserStack, Zeplin, Hotjar</small>
 
                     <hr>
 
