Updates to indeed guide

--- a/IndeedFeatureDesigns/index.html
+++ b/IndeedFeatureDesigns/index.html
@@ -73,6 +73,8 @@
 
                         <li class="header-nav-menu-item"><a href="#cta">Call-to-action visuals</a></li>
 
+                        <li class="header-nav-menu-item"><a href="#lofi">Low fidelity flows</a></li>
+
                         <li class="header-nav-menu-item"><a href="#awareness">Awareness &amp; Wayfinding visuals</a></li>
 
                         <li class="header-nav-menu-item"><a href="#wayfinding">Navigation visuals</a></li>
@@ -116,6 +118,24 @@
                 <h1 class="content-title">Edit Application call-to-action</h1>
 
                 <img class="content-img" src="images/edit-application-cta-button.jpg">
+
+                <p><a href="#lofi">View low fidelity flows <i class="fas fa-arrow-down"></i></a></p>
+                
+            </div>
+
+        </section>
+
+        <section id="lofi" class="content lofi">
+
+            <div class="content-container">
+
+                <h1 class="content-title">Low fidelity flows</h1>
+
+                <img class="content-img" src="images/email-to-applications-flow.jpg">
+
+                <img class="content-img" src="images/push-to-applications-flow.jpg">
+
+                <img class="content-img" src="images/inline-notification-flow.jpg">
 
                 <p><a href="#awareness">View awareness &amp; wayfinding visuals <i class="fas fa-arrow-down"></i></a></p>
                 
