--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 
                             <hr>
 
-                            <small><strong>Tools/Methodologies Used:</strong> User Research (Qualified &amp; Quantified), Miro, Sketch, InVision, Zeplin, Jira</small>
+                            <small><strong>Tools/Methodologies Used:</strong> User Research (Qualified &amp; Quantified), Miro, Sketch, InVision, Zeplin, Asana</small>
 
                             <hr>
 
