--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
                             <p>One of the challenges was working in concert with multiple teams, each responsible for different areas of the whole Home Internet experience. These teams were made up of myriad developers, designers, project managers, writers, and more. Keeping everyone aware and on board with my team's direction and decision making was as challenging, if not more so, as creating and building the new experience itself.</p>
 
-                            <p>With regard to the experience itself, our core issue was that a large visual disconnect existed from the landing page that led to our eligibility experience. I worked with the digital team that created said landing page, and quickly gathered the resources necessary to update our own designs.</p>
+                            <p>With regard to the experience, our core issue was that a large visual disconnect existed from the landing page that led to our eligibility experience. I worked with the digital team that created said landing page, and quickly gathered the resources necessary to update our own designs.</p>
 
                         </div>
 
