--- a/Legomasters/index.html
+++ b/Legomasters/index.html
@@ -46,7 +46,7 @@
 
         <div class="intro-container">
 
-            <span class="intro-subtitle">resenting</span>
+            <span class="intro-subtitle">Presenting</span>
 
             <h1 class="intro-title">The Lego Masters</h1>
 
