--- a/Legomasters/index.html
+++ b/Legomasters/index.html
@@ -12,6 +12,7 @@
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta name="robots" content="noindex" />
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1" />
 
