Updates to resume stuff

--- a/resume.html
+++ b/resume.html
@@ -139,6 +139,17 @@
 
                     <h2 class="project-overview-subtitle">Work Experience</h2>
 
+                    <small><strong>Senior UX Designer</strong> | USAA<br> <span>May 2021 &ndash; Present</span></small>
+
+                    <ul>
+
+                        <li>Leads AEM Design System team through the creation and release of new components, design guidance and documentation, and process refinement</li>
+                        <li>Applies advanced knowledge and experience in the practice of human-centered design</li>
+                        <li>Synthesizes the work of cross functional teams to deliver a unified design vision for complex Member and Employee experiences in a data-informed, agile environment</li>
+                        <li>Demonstrates the value of design by building trust-based relationships that influence the alignment of stakeholders across projects, teams, and functions</li>
+
+                    </ul>
+
                     <small><strong>Senior UX Design Consultant</strong> | Slalom<br> <span>April 2019 &ndash; Present</span></small>
 
                     <ul>
