--- a/resume.html
+++ b/resume.html
@@ -150,7 +150,7 @@
 
                     </ul>
 
-                    <small><strong>Senior UX Design Consultant</strong> | Slalom<br> <span>April 2019 &ndash; Present</span></small>
+                    <small><strong>Senior UX Design Consultant</strong> | Slalom<br> <span>April 2019 &ndash; May 2021</span></small>
 
                     <ul>
 
