--- a/about.html
+++ b/about.html
@@ -46,13 +46,13 @@
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
 
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-HG44RDNLG4"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
           gtag('js', new Date());
 
-          gtag('config', 'UA-6645091-26');
+          gtag('config', 'G-HG44RDNLG4');
         </script>
 
 
