--- a/resume.html
+++ b/resume.html
@@ -109,7 +109,7 @@
 
                 <footer class="footer">
 
-                    <small class="footer-copyright">&copy; 2020 Dave Dechant</small>
+                    <small class="footer-copyright">&copy; 2025 Dave Dechant</small>
 
                 </footer>
 
@@ -139,11 +139,11 @@
 
                     <h2 class="project-overview-subtitle">Work Experience</h2>
 
-                    <small><strong>Senior UX Designer</strong> | USAA<br> <span>May 2021 &ndash; Present</span></small>
+                    <small><strong>Lead Designer</strong> | USAA<br> <span>May 2021 &ndash; Present</span></small>
 
                     <ul>
 
-                        <li>Leads AEM Design System team through the creation and release of new components, design guidance and documentation, and process refinement</li>
+                        <li>Leads USAA Reveille Design System team through the creation and release of new components, design guidance and documentation, and process refinement</li>
                         <li>Applies advanced knowledge and experience in the practice of human-centered design</li>
                         <li>Synthesizes the work of cross functional teams to deliver a unified design vision for complex Member and Employee experiences in a data-informed, agile environment</li>
                         <li>Demonstrates the value of design by building trust-based relationships that influence the alignment of stakeholders across projects, teams, and functions</li>
